2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
	* PROVIDES: [automated] Fixed invalid entries.

2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
	* DETAILS: [automated] Removed BUILD_API=2.

2006-07-27 Pieter Lenaerts <e-type@sourcemage.org>
	* INSTALL: using $INSTALL_ROOT and man pages to /usr/share/man

2006-04-18 Pieter Lenaerts <e-type@sourcemage.org>
	* DETAILS: added REJECTED
	* moved from editors/ to z-rejected/z-editors

2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
	* DETAILS: (automated) Add KEYWORDS

2006-02-01 Pieter Lenaerts <e-type@sourcemage.org>
	* delete TRIGGERS & DEPENDS, spell has nothing to do with pam
	* added PRE_BUILD & build patch to avoid the useless user input

2006-01-27 Pieter Lenaerts <e-type@sourcemage.org>
	* removed DEPENDS, edited BUILD: doesn't ever depend on pam or openssl

2006-01-08 Pieter Lenaerts <e-type@sourcemage.org>
	* DETAILS: updated to 4.64
	* DEPENDS: added some flags for optional dependencies
	* BUILD: now checks if optional dependencies are chosen for instead of
	checking if the spells are ok
	* PROVIDES: provides TEXT-EDITOR

2005-11-29 Seth Woolley <seth@tautology.org>
	* DETAILS: MD5 -> SHA512

2005-05-06 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 4.63

2005-01-24 Pieter Lenaerts <e-type@sourcemage.org>
	* DETAILS, BUILD, INSTALL, HISTORY: build api 2

2005-01-23 Arwed v. Merkatz <v.merkatz@gmx.net>
	* BUILD, DEPENDS, TRIGGERS: Linux-PAM renamed to linux-pam

2005-01-20 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 4.62

2004-07-19 Eric Sandall <eric@sandall.us>
	* DETAILS: Updated to 4.61

2004-05-12 Ladislav Hagara <hgr@vabo.cz>
	* DETAILS: 4.60, changed gz -> bz2

2003-09-13 Ladislav Hagara <hgr@vabo.cz>
	* updated to 4.58

2003-08-23 Eric Sandall <eric@sandall.us>
	* Updated to 4.56 (Bug #4081)

2003-08-10 hgg <hgreig@bigpond.net.au>
	* Revert on_dispel Linux-PAM cast_self (doesn't work the way it is documented)

2003-07-26 hgg <hgreig@bigpond.net.au>
	* Update TRIGGERS for Linux-PAM
