@@ -5,4 +5,10 @@ cd  ../doc &&
 for  MANPAGE  in  `ls  pico*.1`;  do
     gzip  -9 ${MANPAGE} &&
     cp  ${MANPAGE}.gz  ${INSTALL_ROOT}/usr/share/man/man1
-done
+done &&
+
+mkdir -p $INSTALL_ROOT/etc/profile.d/ &&
+if install_config_file  $SCRIPT_DIRECTORY/profile.d/editor.sh   \
+                        $INSTALL_ROOT/etc/profile.d/editor.sh;  then
+  chmod  0755  $INSTALL_ROOT/etc/profile.d/editor.sh
+fi
