@@ -1,3 +1,8 @@
+2007-01-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* profile.d/editor.sh: added
+	* INSTALL: install editor.sh
+	* DETAILS: PATCHLEVEL++
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* PROVIDES: [automated] Fixed invalid entries.
 
